	* src/plugins/DescendReport.py: Register options as a tuple.
	* src/plugins/FtmStyleAncestors.py: Register options as a tuple.
	* src/plugins/FtmStyleDescendants.py: Register options as a tuple.
	* src/plugins/IndivComplete.py:  Register options as a tuple.
	* src/plugins/IndivSummary.py: Register options as a tuple.
	* src/plugins/SimpleBookTitle.py: Register options as a tuple.
	
2003-07-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: eliminate recursive error loop when a thumbnail
	cannot be created.
	* src/plugins/ReorderIds.py: handle IDs better when reordering
	* src/dialog.glade: witness changes

2003-07-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (BookReportSelector.__init__): 
	Enable translation for interface strings,   
	* src/plugins/BookReport.py (BookReportDialog.get_stylesheet_savefile):
	Add this function to form sane filename for the output. 
	Add special treatment for Title entries (no central person displayed).
	* src/plugins/SimpleBookTitle.py: Add configurable title and copyright. 
	Change type to Title (was Text). 
	* src/plugins/IndivComplete.py: Use filter number in configurator. 
	Move get_report_filters out of dialogs classes so that it can be 
	shared between both dialogs and the write_book_item().
	* src/plugins/DescendReport.py: Enable book functionality.
	* src/plugins/AncestorReport.py: Enable book functionality.
	* src/plugins/Ancestors.py: Enable book functionality.

2003-07-04  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Really fixed text style for '(no photo)'.

2003-07-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcocm.py: Fix callback parameters
	* src/AddSpouse.py: handle adding of new person callback correctly
	* src/plugins/WriteGedcom.py: handle surnames containing a slash
	* src/SourceView.py: Speed up redraw performance
	* src/Witness.py: integrate SelectPerson

2003-07-01  Tim Waugh  <twaugh@redhat.com>