@@ -8,7 +8,9 @@
 	* src/plugins/IndivComplete.py:  Register options as a tuple.
 	* src/plugins/IndivSummary.py: Register options as a tuple.
 	* src/plugins/SimpleBookTitle.py: Register options as a tuple.
-	
+	* src/plugins/FamilyGroup.py: Enable book functionality.
+	Check whether family exists before accessing it. 
+
 2003-07-05  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/ImageSelect.py: eliminate recursive error loop when a thumbnail
 	cannot be created.
